# Audio-Fingerprinting

./: .gitignore  CMakeLists.txt  README.md  audio_loader.cpp  database.cpp  fft_processor.cpp  fingerprint.cpp  main.cpp  matcher.cpp  mic_recorder.cpp  peak_finder.cpp
data/: database.sql
